saves/test/demo_full_20240802_193545/notgate/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp notgate_tb.v notgate.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
notgate_tb.v:63: $finish called at 46000 (1ps)

iverilog cmd 2 error:

